--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "base-64": "^0.1.0",
     "expo": "^22.0.2",
+    "js-base64": "^2.3.2",
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5"
   }
