--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,17 @@
 {
     "parser": "babel-eslint",
     "env": {
-        "browser": true
+        "browser": true,
+        "jest": true
     },
     "plugins": [
-        "react"
+        "react",
+        "jest"
     ],
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "plugin:jest/recommended"
     ],
     "rules": {
         // overrides
