--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.tomhobbs.spotipaper"
+          xmlns:tools="http://schemas.android.com/tools"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
   <application
@@ -31,5 +32,55 @@
     <!-- The Facebook SDK runs FacebookInitProvider on startup and crashes if there isn't an ID here -->
     <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="fb0"/>
   </application>
+
+  <uses-permission tools:node="remove" android:name="android.permission.READ_CALENDAR" />
+  <uses-permission tools:node="remove" android:name="android.permission.WRITE_CALENDAR" />
+  <uses-permission tools:node="remove" android:name="android.permission.CAMERA" />
+  <uses-permission tools:node="remove" android:name="android.permission.READ_CONTACTS" />
+  <uses-permission tools:node="remove" android:name="android.permission.WRITE_CONTACTS" />
+  <uses-permission tools:node="remove" android:name="android.permission.GET_ACCOUNTS" />
+  <uses-permission tools:node="remove" android:name="android.permission.RECORD_AUDIO" />
+  <uses-permission tools:node="remove" android:name="android.permission.READ_PHONE_STATE" />
+  <uses-permission tools:node="remove" android:name="android.permission.CALL_PHONE" />
+  <uses-permission tools:node="remove" android:name="android.permission.READ_CALL_LOG" />
+  <uses-permission tools:node="remove" android:name="android.permission.WRITE_CALL_LOG" />
+  <uses-permission tools:node="remove" android:name="android.permission.ADD_VOICEMAIL" />
+  <uses-permission tools:node="remove" android:name="android.permission.USE_SIP" />
+  <uses-permission tools:node="remove" android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+  <uses-permission tools:node="remove" android:name="android.permission.BODY_SENSORS" />
+  <uses-permission tools:node="remove" android:name="android.permission.SEND_SMS" />
+  <uses-permission tools:node="remove" android:name="android.permission.RECEIVE_SMS" />
+  <uses-permission tools:node="remove" android:name="android.permission.READ_SMS" />
+  <uses-permission tools:node="remove" android:name="android.permission.RECEIVE_WAP_PUSH" />
+  <uses-permission tools:node="remove" android:name="android.permission.RECEIVE_MMS" />
+  <uses-permission tools:node="remove" android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission tools:node="remove" android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+  <uses-permission tools:node="remove" android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <uses-permission tools:node="remove" android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission tools:node="remove" android:name="android.permission.INSTALL_SHORTCUT" />
+  <uses-permission tools:node="remove" android:name="android.permission.WAKE_LOCK" />
+  <uses-permission tools:node="remove" android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+  <uses-permission tools:node="remove" android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <uses-permission tools:node="remove" android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <!--<uses-permission tools:node="remove" android:name="android.permission.ACCESS_NETWORK_STATE" />-->
+  <!--<uses-permission tools:node="remove" android:name="android.permission.INTERNET" />-->
+  <uses-permission tools:node="remove" android:name="android.permission.MANAGE_DOCUMENTS" />
+  <uses-permission tools:node="remove" android:name="android.permission.READ_INTERNAL_STORAGE" />
+  <uses-permission tools:node="remove" android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+  <uses-permission tools:node="remove" android:name="android.permission.USE_FINGERPRINT" />
+  <uses-permission tools:node="remove" android:name="android.permission.WAKE_LOCK" />
+  <uses-permission tools:node="remove" android:name="com.anddoes.launcher.permission.UPDATE_COUNT" />
+  <uses-permission tools:node="remove" android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
+  <!--<uses-permission tools:node="remove" android:name="com.google.android.c2dm.permission.RECEIVE" />-->
+  <uses-permission tools:node="remove" android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
+  <uses-permission tools:node="remove" android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+  <uses-permission tools:node="remove" android:name="com.htc.launcher.permission.READ_SETTINGS" />
+  <uses-permission tools:node="remove" android:name="com.htc.launcher.permission.UPDATE_SHORTCUT" />
+  <uses-permission tools:node="remove" android:name="com.majeur.launcher.permission.UPDATE_BADGE" />
+  <uses-permission tools:node="remove" android:name="com.sec.android.provider.badge.permission.READ" />
+  <uses-permission tools:node="remove" android:name="com.sec.android.provider.badge.permission.WRITE" />
+  <uses-permission tools:node="remove" android:name="com.sonyericsson.home.permission.BROADCAST_BADGE" />
+  <uses-permission tools:node="remove" android:name="host.exp.exponent.permission.C2D_MESSAGE" />
 
 </manifest>
